@@ -43,6 +43,8 @@ dependencies {
     testImplementation 'org.testcontainers:testcontainers-mongodb'
     testImplementation 'org.testcontainers:testcontainers-junit-jupiter'
     testImplementation "org.wiremock:wiremock-standalone:${wiremockVersion}"
+    testImplementation "io.gatling.highcharts:gatling-charts-highcharts:${gatlingVersion}"
+    testImplementation "io.gatling:gatling-app:${gatlingVersion}"
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
@@ -54,7 +56,7 @@ dependencyManagement {
 
 tasks.named('test') {
     useJUnitPlatform()
-    jvmArgs(['--enable-preview'])
+    jvmArgs(['--enable-preview', '--add-opens=java.base/java.lang=ALL-UNNAMED'])
 }
 
 bootJar {
